# llm_router_api

./: .gitignore  Dockerfile  Dockerfile.phoenix  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  start.sh  start_phoenix.py  start_phoenix.sh  stop.sh
app/: __init__.py  main.py  models.py  routes.py
app/config/: config.py  config.yaml  phoenix_config.py
app/middleware/: __init__.py  auth_middleware.py  url_rewrite.py
app/models/: __init__.py  chat_models.py  response_models.py
app/services/: auth_service.py  llm_service.py
scripts/: start_phoenix.py
tests/: test_url_rewrite.py
