[tool.poetry]
name = "llm-proxy-service"
version = "0.1.0"
description = "LLM Proxy Service with LiteLLM and FastAPI"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "0.115.12"
uvicorn = "^0.27.1"
python-dotenv = "^1.0.1"
litellm = "^1.30.0"
pydantic = "^2.6.3"
pydantic-settings = "^2.2.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
httpx = "^0.27.0"
PyJWT = "^2.8.0"

[tool.poetry.group.phoenix.dependencies]
arize-phoenix = "8.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.10.1"
isort = "^5.12.0"
mypy = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
llm-proxy = "app.main:app" 

